full rank EM is done

--- a/fr_test_em.ipynb
+++ b/fr_test_em.ipynb
@@ -338,7 +338,7 @@
     "            ch = chat.sum(0, keepdim=True) #shape of[1,N,F,M,1]\n",
     "            RcRx_inv = Rc@Rx_inv\n",
     "            Rnhat = xxh - RcRx_inv@xxh - xxh@(RcRx_inv.transpose(-1,-2).conj()) \\\n",
-    "                +ch@ch.transpose(-1, -2).conj() #shape of [N,F,M,M]\n",
+    "               + (eye-RcRx_inv)@Rc + ch@ch.transpose(-1, -2).conj() #shape of [N,F,M,M]\n",
     "\n",
     "            \"M-step\"\n",
     "            vhat = (Rj.inverse()[:,None,None]@Rcjhat).diagonal(dim1=-1, dim2=-2).mean(-1)\n",
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% 6-class EM\n",
+    "#%% 6-class EM --without noise term\n",
     "from utils import *\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "plt.rcParams['figure.dpi'] = 150\n",
