--- a/r1_test_em.ipynb
+++ b/r1_test_em.ipynb
@@ -429,7 +429,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.15 (main, Nov 24 2022, 14:31:59) \n[GCC 11.2.0]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
